feat(import): update watermark text in modals and add new POA images; adjust CSS font size and letter spacing

--- a/import.html
+++ b/import.html
@@ -1116,7 +1116,7 @@ Message: ${formData.message || 'N/A'}`;
         <div class="modal-body protected-image-container" style="padding: 0; position: relative;">
           <div class="image-protection-overlay"></div>
           <img src="./assets/prescription-format.jpg" class="protected-image" style="width: 100%; height: 100%; border: none; object-fit: contain; pointer-events: none; user-select: none; -webkit-user-select: none; -moz-user-select: none; -ms-user-select: none;"/>
-          <div class="watermark-overlay">PROTECTED</div>
+          <div class="watermark-overlay">Formato del borrador</div>
         </div>
       </div>
     </div>
@@ -1140,7 +1140,7 @@ Message: ${formData.message || 'N/A'}`;
         <div class="modal-body protected-image-container" style="padding: 0; position: relative;">
           <div class="image-protection-overlay"></div>
           <img src="./assets/identity-proof.jpeg" class="protected-image" style="width: 100%; height: 100%; border: none; object-fit: contain; pointer-events: none; user-select: none; -webkit-user-select: none; -moz-user-select: none; -ms-user-select: none;"/>
-          <div class="watermark-overlay">PROTECTED</div>
+          <div class="watermark-overlay">Formato del borrador</div>
         </div>
       </div>
     </div>
